dist/core/src/test/baseman/invalid-usage/case-param-position-1/subcases.js
"use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.default = [
    {
        name: 'no-argument-a',
        args: ['a'],
    },
    {
        name: 'no-argument-b',
        args: ['b'],
    },
    {
        name: 'no-argument-c',
        args: ['c'],
    },
    {
        name: 'no-argument-d',
        args: ['d'],
    },
];
//# sourceMappingURL=subcases.js.map